--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -130,7 +130,7 @@ Finished execution for module: main.
 
 Example~\ref{ex:traffic-light-ltl} shows a \uclid{} model of an intersection with two traffic lights. Lines~3--39 define the functionality of the traffic light; this part of the model should be familiar. The current state of the lights are stored in the variables \codelike{light1} and \codelike{light2}, and these switch from \codelike{red} to \codelike{green} to \codelike{yellow} and back to \codelike{red}. The variables \codelike{step1} and \codelike{step2} can be thought of timers, and ensure that each light stays red for three transitions, green for two transitions and stays yellow for a single transition. 
 
-The LTL properties are on lines 41, 42 and 43. The property \codelike{always\_one\_red} specifies a safety property which states that at least one of the two lights must be \codelike{red} in every particular cycle. The notation $\codelike{G}(\phi)$ refers to the LTL globally operator, while the notation $\codelike{F}(\phi)$ refers to the LTL eventually (future) operator. Other supported operators include next-time: $\codelike{X}(\phi)$, (strong-)until: $\codelike{U}(\phi_1, \phi_2)$ and weak-until: $\codelike{W}(\phi_1, \phi_2)$. \codelike{always\_one\_red} is safety property. The property \codelike{eventually\_green} is an example of liveness property, and specifies that both lights become \codelike{green} infinitely often.
+The LTL properties are on lines 41, 42 and 43. The property \codelike{always\_one\_red} specifies a safety property which states that at least one of the two lights must be \codelike{red} in every particular cycle. The notation $\codelike{G}(\phi)$ refers to the LTL globally operator, while the notation $\codelike{F}(\phi)$ refers to the LTL eventually (future) operator. Other supported operators include next-time: $\codelike{X}(\phi)$, (strong-)until: $\codelike{U}(\phi_1, \phi_2)$ and weak-until: $\codelike{W}(\phi_1, \phi_2)$. \codelike{always\_one\_red} is a safety property. The property \codelike{eventually\_green} is an example of liveness property, and specifies that both lights become \codelike{green} infinitely often.
 
 The command for bounded verification of LTL properties is the \codelike{bmc} command. This is invoked on line 46 and specifies which properties must be checked within the square brackets. (If no properties are specified, and the square brackets are omitted \codelike{bmc} checks all LTL properties in the module.)
 
