--- a/tutorial/refs.bib
+++ b/tutorial/refs.bib
@@ -12,8 +12,38 @@
 
 
 @Misc{uclid-www,
- title = "{{UCLID} Verification System.}",
+ title = "{{UCLID} Verification System, version 3.1.}",
  howpublished = "{Available at \url{http://uclid.eecs.berkeley.edu}}"
 }
 
+@article{clarkson-jcs10,
+  title={Hyperproperties},
+  author={Clarkson, Michael R and Schneider, Fred B},
+  journal={Journal of Computer Security},
+  volume={18},
+  number={6},
+  pages={1157--1210},
+  year={2010},
+  publisher={IOS Press}
+}
 
+@InProceedings{burch-cav94,
+ author = "J. R. Burch and D. L. Dill",
+ title = "Automated verification of pipelined microprocessor control",
+ booktitle = "{Computer-Aided Verification (CAV '94)}", 
+ editor = "D. L. Dill", 
+ series = "LNCS 818", 
+ publisher = "Springer-Verlag", 
+ month = "June", 
+ year = 1994,
+ pages = "68--80"
+}
+
+@Book{leeseshia-16,
+  author = 	 {Edward A. Lee and Sanjit A. Seshia},
+  title = 	 {Introduction to Embedded Systems: A Cyber-Physical Systems Approach},
+  publisher = 	 {MIT Press},
+  url = 	 {http://leeseshia.org},
+  year = 	 {2016},
+  edition = 	 {Second Edition}
+}
