--- a/tutorial/ch-basics.tex
+++ b/tutorial/ch-basics.tex
@@ -119,7 +119,9 @@ Also worth pointing out are the \keyword{if} statement that appears on line~30, 
 
 The syntax for expressions in \uclid{} is similar to languages like C/C++/Java. Index \codelike{i} of array \codelike{regs} is accessed using the syntax \codelike{regs[i]}. Field \codelike{value} in the record \codelike{result} is accessed as \codelike{result.value}.
 
-\section{Verification Model}
+%-----------------------------------------------------
+\section{An Illustrative Example}
+
 This section briefly describes the execution semantics of Example~\ref{ex:alu}.
 
 \subsection{Initialization}
