--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -172,7 +172,7 @@ The output shows that all properties are verified.
 
 \uclid{} provides constructs to check whether one transition system
 simulates another, where both are
-modeled as a \uclid{} modules. In other words, we can check
+modeled as \uclid{} modules. In other words, we can check
 whether one module can simulate steps of another.
 Correspondence checking, a special case of simulation checking,
 is based on constructing a commutative diagram (see Fig.~\ref{fig:comm-diag}) via symbolic simulation and checking the validity of a property
