--- a/tutorial/refs.bib
+++ b/tutorial/refs.bib
@@ -45,5 +45,5 @@
   publisher = 	 {MIT Press},
   url = 	 {http://leeseshia.org},
   year = 	 {2016},
-  edition = 	 {Second Edition}
+  edition = 	 {Second}
 }
