--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -101,6 +101,11 @@ Finished execution for module: main.
 
 Success! We have shown that our system model satisfies its specification.
 
+\subsection{Exercise: Inductive Proof of CPU model}
+Prove determinism of the CPU model in Examples~\ref{ex:cpu-cpu} 
+and~\ref{ex:cpu-main} using induction rather than bounded model 
+checking. You will need to add strengthening inductive invariants relating the two CPU instances.
+
 %---------------------------------------------------------
 \section{Bounded Model Checking}
 
