Fix tutorial citation to old UCLID
tutorial citation now points at CAV paper on UCLID decision procedure, since link to old UCLID system is now dead

--- a/tutorial/ch-introduction.tex
+++ b/tutorial/ch-introduction.tex
@@ -10,7 +10,7 @@ The \uclid{} toolchain aims to:
 \end{enumerate}
 
 \uclid draws inspiration from the earlier {UCLID} system for modeling
-and verification of systems~\cite{bryant-cav02,uclid-www}, in particular
+and verification of systems~\cite{bryant-cav02,DBLP:conf/cav/LahiriS04}, in particular
 the idea of modeling concurrent systems in first-order logic 
 with a range of background theories, and the use of proof scripts
 within the model. However, the \uclid modeling
