--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -199,7 +199,7 @@ pipelined datapath,
 is illustrated in detail in the code included below
 (also in the distribution in \codelike{examples/simple-datapath.ucl}).
 %Example~\ref{ex:simple-datapath}.
-This example is drawn from the original UCLID system~\cite{uclid-www,bryant-cav02}.
+This example is drawn from the original UCLID system~\cite{DBLP:conf/cav/LahiriS04,bryant-cav02}.
 
 %\begin{uclidlisting}[htbp]
     \lstinputlisting[language=uclid,style=uclidstyle]{../examples/simple-datapath.ucl}
