--- a/tutorial/refs.bib
+++ b/tutorial/refs.bib
@@ -10,6 +10,25 @@
  year = "2002"
 }
 
+@inproceedings{DBLP:conf/cav/LahiriS04,
+  author    = {Shuvendu K. Lahiri and
+               Sanjit A. Seshia},
+  editor    = {Rajeev Alur and
+               Doron A. Peled},
+  title     = {The {UCLID} Decision Procedure},
+  booktitle = {Computer Aided Verification, 16th International Conference, {CAV}
+               2004, Boston, MA, USA, July 13-17, 2004, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {3114},
+  pages     = {475--478},
+  publisher = {Springer},
+  year      = {2004},
+  url       = {https://doi.org/10.1007/978-3-540-27813-9\_40},
+  doi       = {10.1007/978-3-540-27813-9\_40},
+  timestamp = {Tue, 14 May 2019 10:00:43 +0200},
+  biburl    = {https://dblp.org/rec/conf/cav/LahiriS04.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
 
 @Misc{uclid-www,
  title = "{{UCLID} Verification System, version 3.1.}",
