deprecate unroll, use BMC instead
- adds warning message deprecating unroll
- extends unroll to support unroll[properties=[list]], to be consistent with bmc
- bmc now supports nonLTL and LTL properties and checks all of them
- also intrduces bmc_noLTL, which only checks nonLTL and bmc_LTL which only checks LTL
- updates tutorial
- changes a few of the tests to use new syntax.
- some tests remain using old unroll syntax, because we want this to keep working for now

--- a/tutorial/ch-grammar.tex
+++ b/tutorial/ch-grammar.tex
@@ -326,6 +326,8 @@ The following is a list of currently accepted commands.
 
 \begin{grammar}
     <CmdName> ::= `bmc' \alt
+                  `bmc_LTL' \alt
+                  `bmc_noLTL' \alt
                   `check' \alt
                   `clear\_context' \alt
                   `induction' \alt
