--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -115,7 +115,7 @@ checking. You will need to add strengthening inductive invariants relating the t
     \label{ex:fib-model-v2}
 \end{uclidlisting}
 
-Let us return to the model of Example~\ref{ex:fib-model} which is reproduced as Example~\ref{ex:fib-model-v2} with a few changes. We used the \codelike{unroll} command for verification. This command performs bounded model checking and takes a single argument -- the number of steps to unroll the model for. In Example~\ref{ex:fib-model-v2}, we are unrolling the model for 3 steps. We have introduced the constant \codelike{flag} on line~4. A constant holds a symbolic value that does not change during computation. The initial value of the constant is assigned non-deterministically and can be controlled using assumptions.
+Let us return to the model of Example~\ref{ex:fib-model} which is reproduced as Example~\ref{ex:fib-model-v2} with a few changes. We used the \codelike{bmc} command for verification. This command performs bounded model checking and takes a single argument -- the number of steps to unroll the model for. In Example~\ref{ex:fib-model-v2}, we are unrolling the model for 3 steps. The \codelike{bmc} command will check all properties (LTL and non-LTL), and supercedes the deprecated \codelike{unroll} command. To check only the non-LTL properties, use \codelike{bmc_noLTL}. We have introduced the constant \codelike{flag} on line~4. A constant holds a symbolic value that does not change during computation. The initial value of the constant is assigned non-deterministically and can be controlled using assumptions.
 
 \subsection{Embedded assume and assert statements}
 
@@ -149,7 +149,7 @@ Example~\ref{ex:traffic-light-ltl} shows a \uclid{} model of an intersection wit
 
 The LTL properties are on lines 41, 42 and 43. The property \codelike{always\_one\_red} specifies a safety property which states that at least one of the two lights must be \codelike{red} in every particular cycle. The notation $\codelike{G}(\phi)$ refers to the LTL globally operator, while the notation $\codelike{F}(\phi)$ refers to the LTL eventually (future) operator. Other supported operators include next-time: $\codelike{X}(\phi)$, (strong-)until: $\codelike{U}(\phi_1, \phi_2)$ and weak-until: $\codelike{W}(\phi_1, \phi_2)$. \codelike{always\_one\_red} is a safety property. The property \codelike{eventually\_green} is an example of liveness property, and specifies that both lights become \codelike{green} infinitely often.
 
-The command for bounded verification of LTL properties is the \codelike{bmc} command. This is invoked on line 46 and specifies which properties must be checked within the square brackets. (If no properties are specified, and the square brackets are omitted \codelike{bmc} checks all LTL properties in the module.)
+The command \codelike{bmc} performs bounded verification of all properties, including LTL properties. This is invoked on line 46 and specifies which properties must be checked within the square brackets. (If no properties are specified, and the square brackets are omitted \codelike{bmc} checks all properties in the module.) To check only the LTL properties use the \codelike{bmc_LTL} command. 
 
 \subsection{Running \uclid{}}
 Running \uclid{} on Example~\ref{ex:traffic-light-ltl} produces the following output.
